# mosgim

./: .gitignore  Makefile  README.md  createLCP.py  geo.py  geomag.py  loader.py  mosgim.py  mosgim_const.py  mosgim_linear.py  plotN.py  prepare.py  process.py  pyproject.toml  requirements.txt  tec_prepare.py  time_util.py
mosgim/data/: loader.py  tec_prepare.py
mosgim/geo/: geomag.py  prepare.py
mosgim/loader/: tec_prepare.py
mosgim/mosg/: lcp_solver.py  map_creator.py  mosgim.py
mosgim/plotter/: animation.py  plotN.py
scripts/: create_lcp.py  create_mosgim.py  load_and_prepare.py  plot_map.py  process.py
